--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+# Server
+server.port=5060
+server.servlet.contextPath=/api/v1
 
+# DATABASE
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/cards_db
+spring.datasource.username=root
+spring.datasource.password=vinny
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# FLYWAY
+spring.flyway.user=root
+spring.flyway.password=vinny
+spring.flyway.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/cards_db
+spring.flyway.locations=classpath:db/migration
+## Uncommented for scenarios where flywaydb is not supported
+# spring.flyway.enabled=false
+
+# LOGGING
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
