chore(Authentication)- Add JWT authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,18 @@ spring.flyway.locations=classpath:db/migration
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+default.value.logging.allowed-methods=POST,PATCH
+default.value.logging.request=true
+default.value.logging.response=true
+
 # DEFAULT
+## Role
+default.value.role.admin-id=2
+default.value.role.member-id=1
+
+## Security
+default.value.security.secret-key=mI7gbFbdJRux6AzPY82Y8VjUbxQHYkkD
+default.value.security.token-valid-duration=24
+
 ## Status
 default.value.status.todo=1
