feat(Logging)- Add API logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,9 @@ default.value.logging.allowed-methods=POST,PATCH
 default.value.logging.request=true
 default.value.logging.response=true
 
+## File
+logging.file.name=logs/cards.log
+
 # DEFAULT
 ## Role
 default.value.role.admin-id=2
