feat(Role & Status)- Add finding role and status by name

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,12 +29,12 @@ logging.file.name=logs/cards.log
 
 # DEFAULT
 ## Role
-default.value.role.admin-id=2
-default.value.role.member-id=1
+default.value.role.admin=Admin
+default.value.role.member=Member
 
 ## Security
 default.value.security.secret-key=mI7gbFbdJRux6AzPY82Y8VjUbxQHYkkD
 default.value.security.token-valid-duration=24
 
 ## Status
-default.value.status.todo=1
+default.value.status.todo=To Do
