feat(Documentation)- Configure Swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Server
-server.port=5060
+server.port=5010
 server.servlet.contextPath=/api/v1
 
 # DATABASE
@@ -23,6 +23,9 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 default.value.logging.allowed-methods=POST,PATCH
 default.value.logging.request=true
 default.value.logging.response=true
+
+# SWAGGER
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 ## File
 logging.file.name=logs/cards.log
